# VentaBoletos

./: .gitignore  CMakeLists.txt  README.md  main.cpp
info/: Abstraccion.txt  Preguntas.txt  ToDo.txt
logica/: Funcion.cpp  Funcion.h  Teatro.cpp  Teatro.h
logica/estructuras/: ColaStrings.cpp  ColaStrings.h  EstructuraBase.cpp  EstructuraBase.h  ListaAsientos.cpp  ListaAsientos.h  ListaPilaAsientos.cpp  ListaPilaAsientos.h  PilaAsientos.cpp  PilaAsientos.h
logica/nodos/: Nodo.cpp  Nodo.h  NodoAsiento.cpp  NodoAsiento.h  NodoPilaAsiento.cpp  NodoPilaAsiento.h  NodoString.cpp  NodoString.h
